test-cases/final-dump/incompatible_generics.exp
Error detected during type checking of module(s) incompatible_generics
final-dump/incompatible_generics.wybe:1:23: Type error in call to proc =, argument 1
final-dump/incompatible_generics.wybe:1:23: Type error in call to proc =, argument 2
final-dump/incompatible_generics.wybe:1:23: Type of i incompatible with ?j
